# dexMCP

./: .gitignore  LICENSE.md  README.md  core_types.py  dexmcp_dspy_client.py  dspy_client.py  gradio_demo.py  langchain_client.py  pyproject.toml  pytest.ini  requirements-test.txt  server.py
.github/workflows/: build.yml  lint.yml  test.yml
dexmcp/: abilities.py  api.py  breeding.py  coverage.py  dexmcp_server.py  encounters.py  evolution.py  models.py  moveset.py  pokemon.py  server.py
tests/: __init__.py  conftest.py  test_api_helpers.py  test_breeding_helpers.py  test_coverage_helpers.py  test_coverage_targets.py  test_dexmcp_server.py  test_evolution_helpers.py  test_moveset_helpers.py  test_server_main.py
