[project]
name = "dexmcp"
version = "0.1.0"
description = "MCP server that wraps pypokedex for PokeAPI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]",
  "pypokedex",
  "pydantic",
  "requests",
  "dspy-ai",
  "langchain<1",
  "langchain-openai<1",
  "langchain-google-genai",
  "gradio",
]

[dependency-groups]
dev = [
  "pytest<9",
  "pytest-cov",
  "pytest-asyncio",
  "coverage",
  "ruff",
  "rumdl",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=dexmcp --cov-report=term-missing"
asyncio_mode = "auto"
